examples/kubernetes/lacuna_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: lacuna
  labels:
    app.kubernetes.io/name: lacuna
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: lacuna
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-lacuna
  labels:
    app.kubernetes.io/name: lacuna
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: lacuna
      port:
        name: http
  tls:
    - hosts:
        - lacuna
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lacuna
  labels:
    app.kubernetes.io/name: lacuna
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: lacuna
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lacuna
    spec:
      containers:
      - name: lacuna
        image: ghcr.io/flared/lacuna:v0.10.0
        imagePullPolicy: IfNotPresent
        args: [
          "--config", "/opt/lacuna-config.json",
          "--host", "0.0.0.0",
          "--port", "80",
        ]
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            path: /health
            port: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: lacuna-config
          mountPath: /opt/lacuna-config.json
          subPath: lacuna-config.json
      volumes:
      - name: lacuna-config
        configMap:
          name: lacuna-config
